# degrade

./: Makefile  activate
src/frontend/: .util.cpp.swp  AngelixCommon.h  CMakeLists.txt  build.sh  util.cpp  util.h
src/frontend/harness/: CMakeLists.txt  Harness.cpp
src/frontend/patch/: ApplyPatch.cpp  CMakeLists.txt
src/frontend/record/: CMakeLists.txt  RecordSnapshot.cpp
src/frontend/restore/: .RestoreSnapshot.cpp.swp  CMakeLists.txt  RestoreSnapshot.cpp
src/frontend/suspicious/: CMakeLists.txt  InstrumentSuspicious.cpp  SMTLIB2.cpp
src/repair/: inference.py  main.py  project.py  record.py  synthesis.py  testing.py  transformation.py
src/runtime/: Makefile  ht_table.c  ht_table.h  libangelix.bc  record.c  record.h  restore.c  restore.h  runtime.c  runtime.h
src/tools/: .angelix-compiler.swp  angelix  angelix-compiler  angelix-run-klee
tests/error_handling/: a.out  run.sh  test.py  test_f.c++  vulnerable.txt
tests/error_handling/.dg/backend/: Makefile  compile_commands.json  klee-last  test  test.c  test.c.backup
tests/error_handling/.dg/backend/klee-out-0/: assembly.ll  info  messages.txt  run.istats  run.stats  test000001.kquery  test000001.ktest  test000001.ptr.err  test000001.smt2  test000002.ktest  test000002.smt2  warnings.txt
tests/error_handling/.dg/frontend/: Makefile  compile_commands.json  test  test.c
tests/error_handling/.dg/validation/: backup.c  compile_commands.json  test
